- Fixes #61 and #62 - Upgraded authzforce-ce-parent: 8.0.0 - Upgraded dependency authzforce-ce-rest-api-model: 6.0.0; authzforce-ce-jaxrs-utils: 2.0.1; jettison: 1.4.1; authzforce-ce-core-pdp-*: 17.1.0; authzforce-ce-core-pap-api: 11.0.0, authzforce-ce-pap-dao-flat-file: 13.0.0 - Added support for validation of XACML/JSON requests with custom JSON schema stored in config directory - Upgraded to Java 11 - updated license headers for 2021 - Fixed issues spotted by Intellij - Added new JNDI env variable for configuring the webapp: 'org.ow2.authzforce.domains.xacmlJsonSchemaRelativePath' (relative path to JSON schema, relative to configDir property)